# remoko

./: HIDServer.py  Makefile  ProjectHome.md  control_channel.c  disconnect.edc  hidclient.c  l2capclient.py  menu.edc  passkey.edc  remoko.edc  remoko.py  remoko_key_mapper.py  rfcommClientObex.py  service2.py  service3.py  serviceHID.py  service_record.xml  test_ui.py
BT_HID_Server/: ChangeLog  Makefile  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  control  copyright  libtool
BT_HID_Server/data/: Makefile
BT_HID_Server/po/: Makefile  Makefile.in
BT_HID_Server/src/: Makefile  Makefile.in  hidclient  hidclient.c
BT_HID_Server/src/.deps/: hidclient.Po
BT_HID_UI/: remoko.bb  setup.py
data/: service_record.xml
doc/: ChangeLog  copyright
remoko/: remoko_key_mapper.py
themes/: accelerometer.edc  accelerometer_conf.edc  connection_status.edc  games.edc  generate_edje.sh  keyboard_ui.edc  mouse_ui.edc  presentation.edc  presentation_conf.edc  remoko.edc
trunk/: HIDclass.py  client.py  generate_edje.sh  hidclient.c  interrupt_channel.c  l2capclient.py  menu.edc  mouse_ui.edc  passkey.edc  remoko.edc  remoko.py  remoko_server.py  rfcommClientObex.py  service2.py  service3.py  service_record.xml  test_ui.py
trunk/BT_HID_Server/src/: Makefile  Makefile.am  hidclient  hidclient.c
unstable/: geany_run_script.sh  hidclient  remoko.py  remoko_accelerometer.py  remoko_conf.py  remoko_disconnect.py  remoko_games.py  remoko_games_ball.py  remoko_key_mapper.py  remoko_known_devices_conf.py  remoko_menu.py  setup.py  (+3 more)
(+91 files in other folders)
