AC_PREREQ(2.53)
AC_INIT(remokoserver, 0.2, http://code.google.com/p/remoko)
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR(src/hidclient.c)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CC_STDC
AC_STDC_HEADERS
AC_PROG_LIBTOOL

PKG_CHECK_MODULES(DEPENDENCIES, bluez)
AC_SUBST(DEPENDENCIES)

AC_OUTPUT([
Makefile
src/Makefile
])

